# intake-document

./: .gitignore  CLAUDE.md  README.md  SPEC.md  Test1.md  pyproject.toml
docs/: conventions-python-project.md  python-project-layout.md  xdg_specification.md
output/: FIRSTsecondtestpdf.md  FIRSTtest1.md  SECONDsecondtestpdf.md  THIRDsecondtestpdf.md  fourthtestpdf.md  paper_12.md  practicing-mind-005.md  secondtestpdf.md  test.md  test1.md  test5.md  thirdtestdocumentsimple.md
specs/: TODO.md
src/intake_document/: #ocr.py#  __init__.py  __main__.py  cli.py  config.py  ocr.py  processor.py  renderer.py
src/intake_document/models/: __init__.py  document.py  file_models.py  settings.py  upload_file.py
src/intake_document/ocr/: __init__.py  api.py  extraction.py  ocr.py  pdf.py
src/intake_document/utils/: __init__.py  exceptions.py  file_utils.py  logger.py  xdg.py
tests/: test_config.py  test_renderer.py  test_xdg.py
