[project]
name = "intake-document"
version = "0.3.0"
description = "Convert documents into markdown format using Mistral.ai OCR capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mistralai>=0.5.0",
    "pydantic",
    "rich",
    "structlog",
    "config>=0.5.0",
    "xdg-base-dirs",
    "typer",
    "httpx>=0.28.1",
]

[project.scripts]
intake-document = "intake_document.__main__:main"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
source = ["intake_document"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
